# gestion_de_traffic_rond_point_ngaba

./: CMakeLists.txt  README.md  build.ps1  run.ps1
build-manual/: moc_IntersectionWidget.cpp  moc_MainWindow.cpp  moc_SimulationEngine.cpp  moc_SumoIntegration.cpp
build-verify-motion/: moc_IntersectionWidget.cpp  moc_MainWindow.cpp  moc_SimulationEngine.cpp
docs/: CAHIER_DES_CHARGES_NGABA.md  CONCEPTION_DARTS_NGABA.md  DOSSIER_CONCEPTION_NGABA.md  SPECIFICATION_SA_RT_NGABA.md
src/: IntersectionWidget.cpp  IntersectionWidget.h  MainWindow.cpp  MainWindow.h  SimulationEngine.cpp  SimulationEngine.h  TrafficModel.cpp  TrafficModel.h  main.cpp
